--- a/_Imports.razor
+++ b/_Imports.razor
@@ -2,6 +2,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using My_Site
+@using My_Site.Components
 @using MudBlazor
+@using Octokit
+@using Octokit.Helpers
 @using MudBlazor.Components
 @using MudBlazorFix
