--- a/Components/RepoComp.razor
+++ b/Components/RepoComp.razor
@@ -1,18 +1,30 @@
 @foreach (var repo in repos)
 {
-       <MudGrid Spacing="5" Justify="Justify.Center">
-    <MudItem>
-        <MudPaper Height="1px" Width="1px"/>
+    <MudGrid Spacing="5" Justify="Justify.Center">
+    <MudItem class="mx-auto pa-16">
+        <MudPaper  Height="1px" Width="1px"/>
     </MudItem>
     <MudItem  class="mx-auto pa-16">
-                <MudImage ObjectPosition="ObjectPosition.Center" Width="600" Height="300" ObjectFit="ObjectFit.Fill" Src="Assets/proj.png" Alt="Mony the dog" Elevation="25" Class="rounded-lg"/>
-                <MudText Align="Align.Center" Typo="Typo.h3" Color="Color.Secondary">@repo.full_name</MudText>
+                
+                <MudGrid Spacing="5" Justify="Justify.Center">
+                <MudItem class="mx-auto pa-16">
+                    <MudPaper  Height="1px" Width="1px"/>
+                </MudItem>
+                <MudItem  class="mx-auto pa-16">
+                            <MudImage ObjectPosition="ObjectPosition.Center" Width="600" Height="300" ObjectFit="ObjectFit.Fill" Src="Assets/proj.png" Alt="Mony the dog" Elevation="25" Class="rounded-lg"/>
+                </MudItem>
+                <MudItem class="mx-auto pa-16">
+                    <MudPaper Height="1px" Width="1px" />
+                </MudItem>
+                </MudGrid>
+
+                <MudLink Href="@repo.GetRepoLink()"><MudText Align="Align.Center" Typo="Typo.h3" Color="Color.Secondary">@repo.full_name.Remove(0, repo.full_name.IndexOf("/") + 1);</MudText></MudLink>
                 <MudText Align="Align.Center" Typo="Typo.h5">
                     @repo.description 
                 </MudText>
         
     </MudItem>
-    <MudItem>
+    <MudItem class="mx-auto pa-16">
         <MudPaper Height="1px" Width="1px" />
     </MudItem>
 </MudGrid>
