--- a/Pages/Profile.razor
+++ b/Pages/Profile.razor
@@ -1,4 +1,5 @@
-﻿@page "/"
+@page "/"
+
 <MudGrid Spacing="5" Justify="Justify.Center">
     <MudItem>
         <MudPaper Height="1px" Width="1px"/>
