--- a/_Imports.razor
+++ b/_Imports.razor
@@ -1,10 +1,11 @@
-﻿@using Microsoft.AspNetCore.Components.Routing
+﻿@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using My_Site
 @using My_Site.Components
 @using MudBlazor
-@using Octokit
-@using Octokit.Helpers
 @using MudBlazor.Components
 @using MudBlazorFix
